--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,6 +25,7 @@ jobs:
     - name: Build and push Docker image
       uses: docker/build-push-action@v6
       with:
-        context: web/
+        context: .
+        file: web/Dockerfile
         push: true
         tags: justkacz/fastapi:latest
